--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">Beast</string>
+
+    <!-- Accessibility strings -->
+    <string name="a11y_bottom_navigation_bar">Bottom navigation bar with Having actions </string>
+
+    <string name="navigation_item_home">首页</string>
+    <string name="navigation_item_widgets">选项</string>
+    <string name="navigation_item_animation">发现</string>
+    <string name="navigation_item_demoui">门店</string>
+    <string name="navigation_item_profile">我的</string>
+    <string name="title_activity_list_view">My Compose App</string>
+    <string name="title_activity_dialogs">Dialogs Activity</string>
+    <string name="title_activity_dynamic_u_i">My Compose App</string>
+    <string name="title_activity_demo_uihost">DemoUI</string>
+
+    <string name="test_adbanner_id">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="test_admob_id">ca-app-pub-5207778306358129~3940384518</string>
+    <string name="title_activity_advance_lists">My Compose App</string>
+    <string name="title_activity_custom_fling">Custom Fling</string>
+    <string name="title_activity_custom_fling_settings">Custom Fling Settings</string>
+    <string name="title_activity_templates">Templates</string>
+    <string name="cd_back">Back</string>
+    <string name="cd_change_color">Change color</string>
+    <string name="cd_dark_theme">Dark Theme</string>
 </resources>
