add color theme add dark theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="a11y_bottom_navigation_bar">Bottom navigation bar with Having actions </string>
 
     <string name="navigation_item_home">首页</string>
-    <string name="navigation_item_widgets">选项</string>
+    <string name="navigation_item_widgets">选购</string>
     <string name="navigation_item_animation">发现</string>
     <string name="navigation_item_demoui">门店</string>
     <string name="navigation_item_profile">我的</string>
